# trader

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml
.github/workflows/: test.yml
option_ai_tool/: __init__.py  alerts.py  cli.py  config.py  database.py  greeks.py  market_data.py  performance.py  research.py  scanner.py  scoring.py  server.py
tests/: run_tests.py  test_database.py  test_greeks.py  test_scoring.py  test_server.py
