[project]
name = "option-ai-tool"
version = "0.1.0"
description = "Real-data options scanner with Greeks, scoring, and alert triggers"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
option-ai-scan = "option_ai_tool.cli:main"
option-ai-server = "option_ai_tool.server:main"

[tool.pytest.ini_options]
pythonpath = ["."]

